samples/_failures_safe/1761506706_17eefb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c0da54e.c: In function ‘main’:
./samples/SAFE/__tmp_1c0da54e.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_1c0da54e.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c0da54e.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c0da54e.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c0da54e.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c0da54e.c:152:21: error: expected declaration or statement at end of input
